--- a/esphome/boards/uart/m5stack/U034/m5stack-C008-atom-lite.yaml
+++ b/esphome/boards/uart/m5stack/U034/m5stack-C008-atom-lite.yaml
@@ -8,8 +8,8 @@ esp32:
 ###
 uart:
   id: uart_modbus
-  tx_pin: 32
-  rx_pin: 26
+  tx_pin: GPIO19
+  rx_pin: GPIO22
   baud_rate: 19200
   data_bits: 8
   stop_bits: 1
