--- a/esphome/boards/uart/m5stack/U034/m5stack-C008-atom-lite.yaml
+++ b/esphome/boards/uart/m5stack/U034/m5stack-C008-atom-lite.yaml
@@ -1,8 +1,8 @@
 # Note: this is the grey module
-esp32:
-  board: m5stack-atom
-  framework:
-    type: esp-idf
+#esp32:
+  #board: m5stack-atom
+  #framework:
+    #type: esp-idf
 ###
 # Uart Settings
 ###
