--- a/esphome/base/general.yaml
+++ b/esphome/base/general.yaml
@@ -19,37 +19,37 @@ sensor:
     platform: modbus_controller
     modbus_controller_id: ${modbus_id}
 # unbalanced_flow_zone1
- - name: ${s_3200}
-        unit_of_measurement: m3/h
-        address: 3200
-        state_class: measurement
-        data_type: int16
-        platform: modbus_controller
-        modbus_controller_id: ${modbus_id}
+  - name: ${s_3200}
+    unit_of_measurement: m3/h
+    address: 3200
+    state_class: measurement
+    data_type: int16
+    platform: modbus_controller
+    modbus_controller_id: ${modbus_id}
   unbalanced_flow_zone2
   - name: ${s_3201}
-        unit_of_measurement: m3/h
-        address: 3201
-        state_class: measurement
-        data_type: int16
-        platform: modbus_controller
-        modbus_controller_id: ${modbus_id}
-  unbalanced_flow_zone3
+    unit_of_measurement: m3/h
+    address: 3201
+    state_class: measurement
+    data_type: int16
+    platform: modbus_controller
+    modbus_controller_id: ${modbus_id}
+  # unbalanced_flow_zone3
   - name: ${s_3202}
-        unit_of_measurement: m3/h
-        address: 3202
-        state_class: measurement
-        data_type: int16
-        platform: modbus_controller
-        modbus_controller_id: ${modbus_id}
-  unbalanced_flow_zone4
+  unit_of_measurement: m3/h
+  address: 3202
+  state_class: measurement
+  data_type: int16
+  platform: modbus_controller
+  modbus_controller_id: ${modbus_id}
+  # unbalanced_flow_zone4
   - name: ${s_3203}
-        unit_of_measurement: m3/h
-        address: 3203
-        state_class: measurement
-        data_type: int16
-        platform: modbus_controller
-        modbus_controller_id: ${modbus_id}
+  unit_of_measurement: m3/h
+  address: 3203
+  state_class: measurement
+  data_type: int16
+  platform: modbus_controller
+  modbus_controller_id: ${modbus_id}
   # - name: ${s_3000}
   #   address: 3000
   #   unit_of_measurement: '%'
