--- a/esphome/boards/uart/m5stack/U034/m5stack-C008-atom-lite.yaml
+++ b/esphome/boards/uart/m5stack/U034/m5stack-C008-atom-lite.yaml
@@ -1,15 +1,15 @@
 # Note: this is the grey module
-#esp32:
-  #board: m5stack-atom
-  #framework:
-    #type: esp-idf
+esp32:
+  board: m5stack-atom
+  framework:
+    type: esp-idf
 ###
 # Uart Settings
 ###
 uart:
   id: uart_modbus
-  tx_pin: GPIO19
-  rx_pin: GPIO22
+  tx_pin: 32
+  rx_pin: 26
   baud_rate: 19200
   data_bits: 8
   stop_bits: 1
