--- a/esphome/base/general.yaml
+++ b/esphome/base/general.yaml
@@ -54,6 +54,15 @@ sensor:
     register_type: holding
     platform: modbus_controller
     modbus_controller_id: ${modbus_id}
+
+  # position_stepper_zone1
+  - name: ${s_2034}
+    address: 2034
+    state_class: measurement
+    value_type: U_WORD
+    register_type: holding
+    platform: modbus_controller
+    modbus_controller_id: ${modbus_id}
   # - name: ${s_3000}
   #   address: 3000
   #   unit_of_measurement: '%'
