--- a/esphome/base/general.yaml
+++ b/esphome/base/general.yaml
@@ -57,6 +57,7 @@ sensor:
 
   # position_stepper_zone1
   - name: ${s_2034}
+    unit_of_measurement: steps
     address: 2034
     state_class: measurement
     value_type: U_WORD
