--- a/esphome/base/general.yaml
+++ b/esphome/base/general.yaml
@@ -64,6 +64,33 @@ sensor:
     register_type: holding
     platform: modbus_controller
     modbus_controller_id: ${modbus_id}
+  # position_stepper_zone2
+  - name: ${s_2036}
+    unit_of_measurement: steps
+    address: 2036
+    state_class: measurement
+    value_type: U_WORD
+    register_type: holding
+    platform: modbus_controller
+    modbus_controller_id: ${modbus_id}
+  # position_stepper_zone3
+  - name: ${s_2036}
+    unit_of_measurement: steps
+    address: 2036
+    state_class: measurement
+    value_type: U_WORD
+    register_type: holding
+    platform: modbus_controller
+    modbus_controller_id: ${modbus_id}
+  # position_stepper_zone4
+  - name: ${s_2038}
+    unit_of_measurement: steps
+    address: 2038
+    state_class: measurement
+    value_type: U_WORD
+    register_type: holding
+    platform: modbus_controller
+    modbus_controller_id: ${modbus_id}
   # - name: ${s_3000}
   #   address: 3000
   #   unit_of_measurement: '%'
