--- a/esphome/base/general.yaml
+++ b/esphome/base/general.yaml
@@ -91,6 +91,16 @@ sensor:
     register_type: holding
     platform: modbus_controller
     modbus_controller_id: ${modbus_id}
+    
+  # ventilation_level_zone1
+  - name: ${s_2200}
+    address: 2200
+    state_class: measurement
+    value_type: U_WORD
+    register_type: holding
+    platform: modbus_controller
+    modbus_controller_id: ${modbus_id}
+
   # - name: ${s_3000}
   #   address: 3000
   #   unit_of_measurement: '%'
